force-app/main/default/objects/DocGen_Template_Version__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>ID of the ContentVersion record for this snapshot.</description>
    <label>Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>