force-app/main/default/objects/DocGen_Template_Version__c/fields/Custom_Margins__c.field-meta.xml
<CustomField>
    <fullName>Custom_Margins__c</fullName>
    <description
    >Snapshot of the template's Custom_Margins__c at the time this version was saved. Format: "Top,Right,Bottom,Left" in inches.</description>
    <label>Custom Margins (in)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>