force-app/main/default/objects/DocGen_Template_Version__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this version is currently active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>