force-app/main/default/objects/DocGen_Template_Version__c/fields/Page_Margins__c.field-meta.xml
<CustomField>
    <fullName>Page_Margins__c</fullName>
    <description>Snapshot of the template's Page_Margins__c at the time this version was saved.</description>
    <label>Page Margins</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default for size</label>
            </value>
            <value>
                <fullName>FromSource</fullName>
                <label>From source DOCX margins</label>
            </value>
            <value>
                <fullName>Narrow</fullName>
                <label>Narrow (0.5 in)</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <label>Normal (1.0 in)</label>
            </value>
            <value>
                <fullName>Wide</fullName>
                <label>Wide (1.5 in)</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <label>Custom (use Custom_Margins__c)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>