force-app/main/default/objects/DocGen_Template_Version__c/fields/Page_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Page_Orientation__c</fullName>
    <description
    >PDF page orientation snapshot for this version. Landscape routes through the Visualforce PDF page; Portrait uses Blob.toPdf directly.</description>
    <label>Page Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portrait</fullName>
                <default>true</default>
                <label>Portrait</label>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>