force-app/main/default/objects/DocGen_Template_Version__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <description
    >Snapshot of the template's Page_Size__c at the time this version was saved. Lets older versions render at their original page size even if the template-level field is later changed.</description>
    <label>Page Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
                <default>true</default>
                <label>Letter (8.5 x 11 in)</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <label>Legal (8.5 x 14 in)</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>A4 (210 x 297 mm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>