force-app/main/default/objects/DocGen_Template_Version__c/fields/Pre_Decomposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Decomposition_Status__c</fullName>
    <description
    >Async pre-decomposition status set by DocGenTemplateDecomposeQueueable. Pending = job enqueued. Complete = per-image and per-XML CVs created. Failed = template too large or unzip error; PDF generation may not work.</description>
    <label>Pre-Decomposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>