force-app/main/default/objects/DocGen_Template_Version__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Parent Template.</description>
    <label>Template</label>
    <referenceTo>DocGen_Template__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>