force-app/main/default/objects/DocGen_Template_Version__c/fields/Watermark_Image_CV_Id__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Image_CV_Id__c</fullName>
    <inlineHelpText>ContentVersion Id of an admin-uploaded watermark / background image. When set, this image renders as the @page background in PDF output, overriding any Word-embedded watermark in the template.</inlineHelpText>
    <label>Watermark Image CV Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>